--- a/netmastery/Bulky/BulkyWeb/appsettings.json
+++ b/netmastery/Bulky/BulkyWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:DESKTOP-2VEBGRD\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-2VEBGRD\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
